k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: clonegallery
  labels:
    name: clonegallery
    app: clonegallery
